Bug 478253 - Finished updates disappear, but still occupy space
Summary: Finished updates disappear, but still occupy space
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: HI minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 480946 484146 485113 485188 485897 487467 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-08 11:07 UTC by Tammes Burghard
Modified: 2024-05-24 23:00 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
Screenshot of a bunch of black spaces in the updates list (78.26 KB, image/png)
2023-12-08 11:07 UTC, Tammes Burghard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tammes Burghard 2023-12-08 11:07:20 UTC
Created attachment 164002 [details]
Screenshot of a bunch of black spaces in the updates list

SUMMARY
***
When I am updating flatpak applications (but I think also other packages), packages that are finished updating disappear from the updates list, but don't free their space so that I end up with a wall of blank space above the last remaining updates in the end.
***


STEPS TO REPRODUCE
1. have a bunch of updates to do
2. go to the updates page
3. click 'update all'
4. wait

OBSERVED RESULT
packages that finished updating get replaced by blank space

EXPECTED RESULT
packages that are finished updating either stay in the list and are marked as finished or are removed from the list and the other packages can take their spaceinfo

SOFTWARE/OS VERSIONS
Operating System: Crystal Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.4-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Andres Betts 2023-12-21 19:55:45 UTC
This also happens on my machine.
Comment 2 Nate Graham 2024-02-06 18:13:48 UTC
*** Bug 480946 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2024-03-21 22:30:33 UTC
*** Bug 484146 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2024-04-06 22:25:28 UTC
*** Bug 485113 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Silva 2024-04-07 20:19:24 UTC
*** Bug 485188 has been marked as a duplicate of this bug. ***
Comment 6 ratijas 2024-04-25 16:58:08 UTC
Git commit 05795bf99a84950b4754d0ec334a8ef300d7bad8 by ivan tkachenko.
Committed on 25/04/2024 at 16:41.
Pushed by ratijas into branch 'master'.

UpdatesPage: Fix invisible delegates taking up space and causing a ghost section header

In Qt 6 ListView allocates space for invisible delegates as well
(unlike Qt 5), so now the issue has surfaced tenfold.

Add a new model role to filter over, so we don't have to mess with
questionably efficient row filter callbacks.

M  +2    -2    discover/qml/UpdatesPage.qml
M  +4    -1    libdiscover/UpdateModel/UpdateModel.cpp
M  +1    -0    libdiscover/UpdateModel/UpdateModel.h

https://invent.kde.org/plasma/discover/-/commit/05795bf99a84950b4754d0ec334a8ef300d7bad8
Comment 7 ratijas 2024-04-25 17:08:47 UTC
Git commit 5d2b983979415a63532bcb049ed03744a06cf598 by ivan tkachenko.
Committed on 25/04/2024 at 17:02.
Pushed by ratijas into branch 'Plasma/6.0'.

UpdatesPage: Fix invisible delegates taking up space and causing a ghost section header

In Qt 6 ListView allocates space for invisible delegates as well
(unlike Qt 5), so now the issue has surfaced tenfold.

Add a new model role to filter over, so we don't have to mess with
questionably efficient row filter callbacks.
(cherry picked from commit 05795bf99a84950b4754d0ec334a8ef300d7bad8)

M  +2    -2    discover/qml/UpdatesPage.qml
M  +4    -1    libdiscover/UpdateModel/UpdateModel.cpp
M  +1    -0    libdiscover/UpdateModel/UpdateModel.h

https://invent.kde.org/plasma/discover/-/commit/5d2b983979415a63532bcb049ed03744a06cf598
Comment 8 Aleix Pol 2024-05-03 12:04:21 UTC
*** Bug 485897 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2024-05-24 23:00:55 UTC
*** Bug 487467 has been marked as a duplicate of this bug. ***