UpdatesPage: Fix invisible delegates taking up space and causing a ghost section header

In Qt 6 ListView allocates space for invisible delegates as well
(unlike Qt 5), so now the issue has surfaced tenfold.

Add a new model role to filter over, so we don't have to mess with
questionably efficient row filter callbacks.

BUG: 478253
(cherry picked from commit 05795bf99a84950b4754d0ec334a8ef300d7bad8)